--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -3,18 +3,18 @@ kind: Deployment
 metadata:
   name: auth-depl
 spec:
+  replicas: 1
   selector:
-    replicas: 1
-    selector: 
-      matchLabels: auth
+    matchLabels:
+      app: auth
   template:
     metadata:
       labels:
         app: auth
     spec:
       containers:
-      - name: auth
-        image: rvanappeldorn/ticketing-auth
+        - name: auth
+          image: rvanappeldorn/ticketing-auth
 ---
 apiVersion: v1
 kind: Service
@@ -24,8 +24,7 @@ spec:
   selector:
     app: auth
   ports:
-  - name: auth
-    protocol: TCP
-    port: 3000
-    targetPort: 3000
-
+    - name: auth
+      protocol: TCP
+      port: 3000
+      targetPort: 3000
