--- a/auth/package.json
+++ b/auth/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.0",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
