--- a/auth/package.json
+++ b/auth/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
