--- a/auth/package.json
+++ b/auth/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
+    "@types/mongoose": "^5.11.97",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "mongoose": "^8.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
