--- a/auth/package.json
+++ b/auth/package.json
@@ -13,14 +13,18 @@
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^6.0.2",
     "cookie-session": "^2.1.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "supertest": "^6.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
