--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -17,3 +17,11 @@ build:
         manual:
           - dest: .
             src: "src/**/*.ts"
+    - image: rvanappeldorn/ticketing-client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - dest: .
+            src: "src/**/*.svelte"
