--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,11 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-node": "^4.0.1"
+	},
+	"peerDependencies": {
+		"@sveltejs/kit": "1.0.0-next.110"
+	}
 }
