--- a/auth/package.json
+++ b/auth/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@demo.io/lib": "^1.0.2",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
