feat(k8s): add tickets context to skaffold

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -17,6 +17,14 @@ build:
         manual:
           - dest: .
             src: "src/**/*.ts"
+    - image: rvanappeldorn/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - dest: .
+            src: "**/*.go"
     - image: rvanappeldorn/ticketing-client
       context: client
       docker:
